[FIX] position typed-text on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -16082,7 +16082,14 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   position: absolute;
   top: 0;
 }
-/* line 24, ../scss/_style.scss */
+@media only screen and (max-width: 600px) {
+  /* line 16, ../scss/_style.scss */
+  #index-banner .section .top {
+    height: 0%;
+    display: none;
+  }
+}
+/* line 29, ../scss/_style.scss */
 #index-banner .section .middle {
   height: 33%;
   width: 100%;
@@ -16090,11 +16097,18 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   position: absolute;
   top: 33%;
 }
-/* line 31, ../scss/_style.scss */
+@media only screen and (max-width: 600px) {
+  /* line 29, ../scss/_style.scss */
+  #index-banner .section .middle {
+    height: 80%;
+    top: 0;
+  }
+}
+/* line 41, ../scss/_style.scss */
 #index-banner .section .middle .valign-wrapper {
   height: 100%;
 }
-/* line 34, ../scss/_style.scss */
+/* line 44, ../scss/_style.scss */
 #index-banner .section .middle .valign-wrapper #typed-text {
   width: 70%;
   margin: auto;
@@ -16102,18 +16116,18 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   font-family: VT323;
 }
 @media only screen and (max-width: 600px) {
-  /* line 34, ../scss/_style.scss */
+  /* line 44, ../scss/_style.scss */
   #index-banner .section .middle .valign-wrapper #typed-text {
     width: 90%;
   }
 }
 @media only screen and (min-width: 601px) and (max-width: 992px) {
-  /* line 34, ../scss/_style.scss */
+  /* line 44, ../scss/_style.scss */
   #index-banner .section .middle .valign-wrapper #typed-text {
     width: 85%;
   }
 }
-/* line 52, ../scss/_style.scss */
+/* line 62, ../scss/_style.scss */
 #index-banner .section .bottom {
   height: 33%;
   width: 100%;
@@ -16121,38 +16135,45 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   top: 66%;
   width: 100%;
 }
-/* line 59, ../scss/_style.scss */
+@media only screen and (max-width: 600px) {
+  /* line 62, ../scss/_style.scss */
+  #index-banner .section .bottom {
+    height: 20%;
+    top: 80%;
+  }
+}
+/* line 74, ../scss/_style.scss */
 #index-banner .section .bottom .valign-wrapper {
   height: 100%;
 }
-/* line 62, ../scss/_style.scss */
+/* line 77, ../scss/_style.scss */
 #index-banner .section .bottom .valign-wrapper #page-scroll {
   width: 100%;
 }
 
-/* line 71, ../scss/_style.scss */
+/* line 86, ../scss/_style.scss */
 #content {
   position: absolute;
   top: 100%;
   width: 100%;
 }
 
-/* line 89, ../scss/_style.scss */
+/* line 104, ../scss/_style.scss */
 footer.page-footer {
   margin: 0;
 }
-/* line 94, ../scss/_style.scss */
+/* line 109, ../scss/_style.scss */
 footer.page-footer .social-container .list-unstyled {
   padding-left: 0;
   list-style: none;
 }
-/* line 99, ../scss/_style.scss */
+/* line 114, ../scss/_style.scss */
 footer.page-footer .social-container .list-inline li {
   display: inline-block;
   padding-right: 5px;
   padding-left: 5px;
 }
-/* line 108, ../scss/_style.scss */
+/* line 123, ../scss/_style.scss */
 footer.page-footer .footer-copyright .fa-heart {
   color: #e74c3c;
 }
